# macrel

./: .gitignore  .travis.yml  AMP-features.py  AMP-predict.py  AMP_HEMOscreening.R  AMP_HEMOscreening02.R  CITATION  CLAUDE.md  CTDDClass.py  ChangeLog  FACS.sh  FACS.v14.sh  FACS11.sh  FACS15.sh  FACS16_conda_envs.sh  FACS17.sh  FACS17v2.sh  FACS9.sh  FACS_merger.sh  FACSv14.sh  LICENSE  MANIFEST.in  Predict.R  Predict_130819.R  README.md  automatedTest.sh  benchmark.sh  features.py  features.sh  features_04061950.R  features_130819.R  features_R.py  filter_smorfs.py  install.sh  installWebserver.sh  macrel_recipe.yml  manual.yml  meta.yaml  mkdocs.yml  new_benchmark.sh  (+12 more)
.github/workflows/: python-app.yml
.travis/: travis_before_install.sh
ADAM_folder/: ADAM.dmnd  ADAM_db.fa
docker/: Dockerfile
docker/facs_website_front/: Dockerfile  nginx.conf
docs/: amp-density-tutorial.md  cite.md  contact.md  faq.md  index.md  install.md  novelty.md  tutorial.md  usage.md  whatsnew.md
example_seqs/: pep8.faa
figures/: FACS_readme.md
macrel/: AMP_features.py  AMP_predict.py  ORFs_prediction.py  ampsphere.py  database.py  fasta.py  feature_functions.py  filter_smorfs.py  macrel_features.py  macrel_version.py  main.py  output.py  utils.py
macrel/tests/: test_ampsphere.py  test_features.py  test_main.py  test_predict.py
prodigal_modified/: Makefile  README.md  dprog.h  main.h  node.h
recipe/: build.sh  meta.yaml
scripts/benchmark1/: Benchmark_complete_first_protocol.sh  metaFACS_script1.sh  metag.sh  new_benchmark.sh  new_benchmark2.sh  protocol.orfm.txt
scripts/benchmark2/: benchmark_contigs.sh  download_GENOMES.sh  download_metaG.sh
scripts/new_metaG/: README.txt  gen_metagenome.sh  genom2_retriever.sh  genomes_genomeInfo.txt  ids.txt  ini_gen.sh  input  new_simulator.sh  simulator.sh  simulator3_art.sh  uniq_genomes
spurius/: bedtools_prep.py  blastXMLmerge.py  dict_np.npy  findorfs.py  gpm_predict.py  helperfunctions.py  predict_spuriosity.py  spu_pred.py  spurius.mod.sh
spurius/db/: fullsource_filter.fa.fai
tests/: .gitignore  automatedTest.sh
tests/abundances/: command.sh
tests/abundances.se/: command.sh  expected.abundance.txt
tests/ampsphere/: command.sh  expected.ampsphere_exact.tsv
tests/ampsphere.local/: command.sh  expected.ampsphere_exact.tsv  pep8.faa
tests/contigs/: command.sh  expected.density  expected.percontigs  expected.prediction
tests/contigs.cluster/: command.sh  expected.prediction
tests/contigs.cluster_less50/: command.sh  expected.prediction
tests/contigs.nosmorfs/: command.sh  expected.density  expected.percontigs  expected.prediction
tests/contigs.nosmorfs_less50/: command.sh  expected.prediction
tests/contigs_less50/: command.sh  expected.prediction
tests/expect.mode_a_fasta.results/: expect.params.xprs  expect.xprs
tests/expect.mode_a_ref.results/: expect.xprs
tests/expect.mode_c.results/: expect.ids.tsv  expect.tsv
tests/expect.mode_p.results/: expect.ids.tsv
tests/expect.mode_r.results/: expect.contigs.fna  expect.ids.tsv  expect.tsv
tests/get-smorfs/: command.sh  expected.smorfs.faa  expected.smorfs.w_headers.faa
tests/peptides/: command.sh  expected.prediction
tests/peptides_less50/: command.sh  expected.prediction
tests/reads.se/: command.sh  expected.density  expected.percontigs  expected.prediction  (+1 more)
train/: .gitignore  README.md  build-AMP-table.py  build-Hemo-table.py  train-models.py  train.R
webserver/: application.properties  installWebserver.sh  nginx.conf  startWebserver.sh  stopWebserver.sh
website/: README.md  api.py  elm.json  nginx.conf
(+110 files in other folders)
