[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macrel"
description = "MACREL"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Celio Dias Santos-Junior" },
    { name = "Luis Pedro Coelho", email = "luispedro@big-data-biology.org" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "onnxruntime",
    "pandas",
    "requests",
    "atomicwrites",
]
dynamic = ["version"]

[project.scripts]
macrel = "macrel.main:main"

[tool.setuptools]
zip-safe = false  # We want the model files to be installed as files

[tool.setuptools.dynamic]
version = { attr = "macrel.macrel_version.__version__" }

[tool.setuptools.packages.find]
include = ["macrel*"]

[tool.setuptools.package-data]
macrel = ["data/*", "data/scripts/*.ngl", "data/models/*.onnx.gz"]
